# Podsidian

./: .gitignore  Apple-Podcasts-Schema.sql  CHANGELOG.md  CLAUDE.md  Constitution.md  README.md  TESTING_LOCAL_AUDIO.md  config.toml.example  create_test_audio.py  create_test_audio.sh  pyproject.toml  test_local_audio.py
Auto Run Docs/: Scratchpad.md
podsidian/: __init__.py  api.py  apple_podcasts.py  backup.py  cli.py  config.py  core.py  cost_tracker.py  markdown.py  migrate_db.py  models.py  stdio_server.py
scripts/: check_whisper.py
testing/: test_mcp_client.py
