[project]
name = "podsidian"
version = "1.1.0"
description = "Bridge between Apple Podcasts and Obsidian with AI-powered features"
authors = [
    {name = "Pedram Amini", email = "pedram@example.com"},
]
dependencies = [
    "feedparser>=6.0.12",
    "openai-whisper>=20250625",
    "sqlalchemy>=2.0.46",
    "click>=8.3.1",
    "requests>=2.32.5",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "sqlite-utils>=3.39",
    "obsidian-py>=0.3.0",
    "tomli>=2.4.0",
    "annoy>=1.17.3",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
podsidian = "podsidian.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
]
